# kazik

./: .gitignore  README.MD  db.sqlite3  manage.py  netlify.toml  pyproject.toml  setup.cfg
.github/workflows/: django.yml
config/: .env.example
kazik/: app.js  index.html
src/: asgi.py  urls.py  wsgi.py
src/apps/menu/: apps.py  models.py
src/settings/components/: database.py
src/settings/enviroments/: local.py  production.py
templates/: index.html
tests/: example_test.py
